Udpate Product Info Page and Profile test
Udpate Product Info Page and Profile test

--- a/src/test/Resources/configs/configs.properties
+++ b/src/test/Resources/configs/configs.properties
@@ -1,6 +1,7 @@
-urlcms=https://cms.anhtester.com/
-email=admin@example.com
-password=123456
+URL_CMS=https://cms.anhtester.com/
+URL_CMS_USER_DASHBOARD=https://cms.anhtester.com/dashboard
+email_admin=admin@example.com
+password_admin=123456
 headless = true
 report = path
 screenshot_fail = true
