--- a/src/test/Resources/configs/data.properties
+++ b/src/test/Resources/configs/data.properties
@@ -1,2 +1,8 @@
 EXCEL_CMS_LOGIN = src/test/Resources/datatest/EXCEL_CMS_LOGIN.xlsx
 EXCEL_CMS_PRODUCT_INFO = src/test/Resources/datatest/EXCEL_GetProductInfo.xlsx
+
+/**/
+Product_01 = Giỏ Quà Tết mXztW
+Product_02 = Gio qua Tet hquHA
+Product_03 = Tet TaiLoc KcDub
+
