Update full version 1.0
Update full version 1.0

--- a/src/test/Resources/configs/data.properties
+++ b/src/test/Resources/configs/data.properties
@@ -1,8 +1,9 @@
 EXCEL_CMS_LOGIN = src/test/Resources/datatest/EXCEL_CMS_LOGIN.xlsx
-EXCEL_CMS_PRODUCT_INFO = src/test/Resources/datatest/EXCEL_GetProductInfo.xlsx
+EXCEL_CMS_PRODUCT_INFO = src/test/Resources/datatest/EXCEL_Get_Product_Info.xlsx
+EXCEL_CMS_ADD_PRODUCT = src/test/Resources/datatest/EXCEL_Product_Info_Add_New.xlsx
 
 /**/
-Product_01 = Giỏ Quà Tết mXztW
+Product_01 = Gi\u1ECF Qu\u00E0 T\u1EBFt mXztW
 Product_02 = Gio qua Tet hquHA
 Product_03 = Tet TaiLoc KcDub
 
