--- a/src/test/Resources/configs/data.properties
+++ b/src/test/Resources/configs/data.properties
@@ -3,6 +3,6 @@ EXCEL_CMS_PRODUCT_INFO = src/test/Resources/datatest/EXCEL_Get_Product_Info.xlsx
 EXCEL_CMS_ADD_PRODUCT = src/test/Resources/datatest/EXCEL_Product_Info_Add_New.xlsx
 
 /**/
-Product_02 = Gio qua Tet hquHA
+Product_02 = Adobe Premiere Elements 2022 | PC/Mac Disc
 Product_03 = Tet TaiLoc KcDub
 
