--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
                     <configuration>
                         <suiteXmlFiles>
                             <!-- Call Suite name -->
-                            <suiteXmlFile>suites/SuiteMultipleBrowserParallel.xml</suiteXmlFile>
+                            <suiteXmlFile>suites/SuiteLoginTest.xml</suiteXmlFile>
                         </suiteXmlFiles>
                         <argLine>
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.19/aspectjweaver-1.9.19.jar"
